src/_assets/css/global/_typography.css
/* Global settings */
body {
	font-family: var(--_font-body-family);
}

main {
	font-size: var(--typeScale-0);
}

::selection {
	color: var(--C-surface);
	text-shadow: none;
	background: color-mix(in hsl, var(--C-heading) 80%, transparent);
}

::target-text {
	color: var(--C-surface);
	text-shadow: none;
	background: var(--C-accent);
}

/* Headings */
:is(h1, h2, h3, h4), /* `:heading` when? */
:is(.h1, .h2, .h3, .h4) {
	color: var(--C-heading);
	font-family: var(--_font-heading-family);
	font-weight: var(--_font-heading-weight);
	font-style: var(--_font-heading-style);
	text-transform: var(--_font-heading-transform);
	letter-spacing: var(--_font-heading-tracking);
	font-feature-settings: var(--_font-heading-features);
	font-size-adjust: var(--_font-heading-size-adjust);
	text-shadow: var(--_font-heading-shadow);
	text-wrap: balance;

	&:has(a:hover) {
		text-shadow: none;
	}
}

.eyebrow {
	display: flex;
	gap: 1em;

	&::after {
		content: '';

		flex: 1 0 0;
		display: block;
		height: 1.6em;
		height: 1lh;

		background: linear-gradient(90deg, currentColor, transparent) no-repeat center / 100% 1px;
	}
}

h4,
.h4 {
	font-size: var(--typeScale-0);
}

h3,
.h3 {
	font-size: var(--typeScale-1);
}

h2,
.h2 {
	font-size: var(--typeScale-2);
}

h1,
.h1 {
	font-size: var(--typeScale-3);
}

.h0 {
	font-size: var(--typeScale-4);
}

/* Inline */
:where(main p) :is(em, var) {
	font-family: var(--fontStack-serif);
}

del {
	text-decoration-thickness: clamp(2px, 0.125em, 4px);
	text-decoration-color: color-mix(in hsl, currentColor 67%, transparent);
}

ins {
	text-decoration-style: double;
	text-decoration-color: var(--C-heading);
	text-decoration-skip-ink: var(--_link-skip-ink);
	text-decoration-thickness: max(1px, var(--_link-decoration-thickness) / 3);
	text-underline-offset: var(--_link-underline-offset);
}

mark {
	padding-inline: 0.0625em;

	color: var(--C-canvas);
	background: var(--C-heading);
}

sup,
sub {
	line-height: 0;
}

samp,
kbd,
code {
	font-size-adjust: 0.45;
	font-family: var(--fontStack-monospace);
}

time {
	font-weight: bold;
	/* text-transform: uppercase; */
}

/* Block */
p {
	text-wrap: pretty;
	text-wrap: avoid-short-last-lines;
}

pre {
	line-height: 1.1;
}

hr {
	inline-size: 100%;
	block-size: 2px;
	border: 0;
	border-radius: var(--_corner);
	background: var(--C-heading);
}

blockquote {
	position: relative;
	isolation: isolate;

	padding-inline-start: calc(var(--layout-gutter) - var(--layout-side-border));

	border-inline-start: var(--layout-side-border) solid var(--C-text, currentColor);

	& > p:not(:first-of-type) {
		margin-block-start: var(--size-m);
	}

	& > p:first-of-type::before {
		content: open-quote;
	}

	& > p:last-of-type::after {
		content: close-quote;
	}

	footer {
		font-size: var(--typeScale-n1);
	}
}

summary::marker {
	color: var(--C-accent-alt, var(--C-accent));
}

dl {
	display: grid;
	grid-template-columns: auto 1fr;
	gap: var(--size-s) var(--size-m);
}

dt {
	align-self: baseline;

	font-weight: bold;
}

/* Adjustments for alt text to be a little more usable */
img[alt]:not([alt='']) {
	align-content: center; /* Vertically centered in one line, holy shit, what will React developers meme about now??? */

	font-size: 0.875rem;
	line-height: 1.33;

	&::before {
		/* Only supported in Firefox, hoping Chrome will allow some styling hook */
		display: block;
		inline-size: 100%;
		block-size: 100%;
		align-content: center;
		padding: 1rem;

		--ALT-line: transparent calc(50% - 0.5px), color-mix(in hsl, currentColor, transparent) 0 calc(50% + 0.5px), transparent 0;
		background: linear-gradient(45deg, var(--ALT-line)), linear-gradient(-45deg, var(--ALT-line));
	}
}

